# hangingman

./: .gitignore  pyproject.toml
hangingman/: game.py  game.py~
hangingman/data/: 10.txt  11.txt  15.txt  4.txt  5.txt  6.txt  output-onlinetexttools (10).txt  output-onlinetexttools (3).txt  output-onlinetexttools (4).txt  output-onlinetexttools (5).txt  output-onlinetexttools (8).txt  output-onlinetexttools (9).txt
tests/: test_hangingman.py  test_hangingman.py~
