[tool.poetry]
name = "hangingman"
version = "0.1.0"
description = ""
authors = ["Alexandre Paloschi Horta <alexandre@buey.net.br>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
